--- a/style.css
+++ b/style.css
@@ -7,13 +7,19 @@ body {
 
 h1 {
     font-family: "Nunito";
-    font-size: 50px;
+    font-size: 40px;
 
 }
 
 h2 {
     font-family: "Nunito";
     font-size: 30px;
+
+}
+
+p {
+    font-family: "Nunito";
+    font-size: 18px;
 
 }
 
@@ -115,8 +121,8 @@ h1.centertext {
   background-size: cover;
   color: white;
   margin-bottom: 0;
-  padding-top: 150px;
-  padding-bottom: 60px;
+  padding-top: 110px;
+  padding-bottom: 50px;
 }
 
 .btn {
