--- a/style.css
+++ b/style.css
@@ -34,10 +34,15 @@ font-family: 'Nunito', sans-serif;
     right: 0;
     bottom: 0;
     width: 100;
-    font-size: 9px;
+    font-size: 6px;
     text-align: center;
     background-color: #222d38;
     color: white;
+    padding-top: 20px;
+}
+
+.small-font {
+    font-size: 12px;
 }
 
 
@@ -59,7 +64,7 @@ img.profile {
     width: 30%;
 }
 .img-footer {
-    width: 100px;
+    width: 170px;
 }
 
 .hero-center{
